--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,66 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
 
+*{
+  margin: 0;
+  padding: 0;
+}
+
 .App{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 95vh;
-  background-color: #f5f5f5;
+  height: 100vh;
+  background-color: #21112a;
+}
+
+.homepage{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 320px;
+  width: 100%;
+  height: 200px;
+  padding: 24px 12px;
+  border: 1px solid gray;
+  border-radius: 7px;
+  background-color: #44074f;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.homepage .form{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .homepage .form label{
   display: block;
+  color: #fff;
+  font-size: 1.3rem;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.homepage input{
+  padding: 10px 5px;
+  width: -webkit-fill-available;
+  outline: none;
+  border-radius: 5px;
+}
+
+.homepage button{
+  cursor: pointer;
+  outline: none;
+  margin-top: 10px;
+  border: none;
+  padding: 7px 0;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 5px;
+  background-color: #fb9200bd;
 }
 
 .homepage{
@@ -21,4 +70,33 @@
 
 .room{
   font-weight: bold;
+}
+
+.room {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: black; /* Set background color */
+}
+
+.room > div{
+  width: 100vw;
+  height: 100vh;
+}
+
+.room > div > div> div> div{
+  background-color: #21112a;
+  box-shadow: none !important;
+}
+
+
+@media screen and (max-width:400px) {
+  .homepage{
+    max-width: 250px;
+    padding: 12px;
+  }
 }
